My code so far.
