# routes/index.js
@@ -9,11 +9,15 @@ const router = Router()
 router.use('/api-docs',swaggerUi.serve)
 router.get('/api-docs', swaggerUi.setup(swaggerDocument))
 
-router.use("/truck",)
-router.use("/user",)
-//not sure likes will work like this, likes could be a feature of users. 
-router.use("/suv",)
-router.use("/car",)
+//import truckRouter from './truck.js'
+//import userRouter from './user.js'
+//import suvRouter from './suv.js'
+import carRouter from  './car.js'
+
+//router.use("/truck", truckRouter)
+//router.use("/user", userRouter)
+//router.use("/suv", suvRouter)
+router.use("/car", carRouter)
 
 router.get("/login",passport.authenticate('github'),(req,res)=>{})
 
